cm4all-workshop (6.0.28) unstable; urgency=low

  * cron: connect to database only if partition is enabled
  * cron: start multiple pending jobs at a time
  * cron: start the oldest job first
  * cron: add setting "default_email_sender"
  * cron: verify the "notification" email address

 --   

cm4all-workshop (6.0.27) unstable; urgency=low

  * state: fix symlink bug

 -- Max Kellermann <mk@cm4all.com>  Thu, 11 Apr 2024 10:28:21 +0200

cm4all-workshop (6.0.26) unstable; urgency=low

  * event: fix assertion failure in timer list

 -- Max Kellermann <mk@cm4all.com>  Wed, 10 Apr 2024 12:38:20 +0200

cm4all-workshop (6.0.25) unstable; urgency=low

  * state: implement (artificial) symlinks

 -- Max Kellermann <mk@cm4all.com>  Tue, 09 Apr 2024 17:40:27 +0200

cm4all-workshop (6.0.24) unstable; urgency=low

  * translation: add packet ANALYTICS_ID
  * drop support for PolicyKit older than version 121

 -- Max Kellermann <mk@cm4all.com>  Fri, 15 Mar 2024 16:52:13 +0100

cm4all-workshop (6.0.23) unstable; urgency=low

  * cron: perform HTTP requests in containerized user process
  * spawn: don't kill on syscall get_mem56 inpolicy(), fail with ENOSYS

 -- Max Kellermann <mk@cm4all.com>  Fri, 23 Feb 2024 22:06:17 +0100

cm4all-workshop (6.0.22) unstable; urgency=low

  * cron: set the HOME environment variable
  * cron: set CHDIR only if not set by translation server
  * cron: allow translation server to specify timeout
  * cron: add setting "default_timeout"
  * cron: TERMINATE_CHILDREN cancels HTTP requests
  * cron: use the SITE translation packet for Pond SITE
  * state: change path to "workshop/cron/NAME/enabled"
  * control: add packet RELOAD_STATE

 -- Max Kellermann <mk@cm4all.com>  Wed, 24 Jan 2024 08:31:03 +0100

cm4all-workshop (6.0.21) unstable; urgency=low

  * cron: on timeout, log "Timeout" in cronresults instead of "Canceled"
  * cron: implement control command TERMINATE_CHILDREN
  * cron: enable/disable queues with files in "state" directories