@@ -223,6 +223,7 @@ executable('cm4all-workshop',
   'src/Instance.cxx',
   'src/Hook.cxx',
   'src/EmailService.cxx',
+  'src/NsQrelayConnect.cxx',
   'src/cron/Config.cxx',
   'src/cron/Schedule.cxx',
   'src/cron/Result.cxx',
