@@ -6,8 +6,12 @@
 #include "Job.hxx"
 #include "Result.hxx"
 #include "lib/fmt/RuntimeError.hxx"
+#include "spawn/ProcessHandle.hxx"
+#include "net/UniqueSocketDescriptor.hxx"
 #include "uri/EmailAddress.hxx"
+#include "util/DisposablePointer.hxx"
 #include "EmailService.hxx"
+#include "NsQrelayConnect.hxx"
 #include "version.h"
 
 #include <fmt/core.h>
@@ -41,17 +45,24 @@ MakeNotificationEmail(std::string_view sender,
 }
 
 void
-SendNotificationEmail(EmailService &service, std::string_view sender,
+SendNotificationEmail(EmailService &service, bool use_qrelay, std::string_view sender,
+		      SpawnService &spawn_service, const ChildOptions &child_options,
 		      const CronJob &job,
 		      const CronResult &result)
 {
 	assert(!job.notification.empty());
 
-	if (!service.HasRelay())
-		throw std::invalid_argument{"No qmqp_server configured"};
-
 	if (!VerifyEmailAddress(job.notification))
 		throw FmtInvalidArgument("Malformed email address: {:?}", job.notification);
 
-	service.Submit(MakeNotificationEmail(sender, job, result));
+	if (use_qrelay) {
+		auto [socket, process] = NsConnectQrelay(spawn_service, job.id.c_str(),
+							 child_options);
+		service.Submit(std::move(socket),
+			       ToDeletePointer(process.release()),
+			       MakeNotificationEmail(sender, job, result));
+	} else if (service.HasRelay())
+		service.Submit(MakeNotificationEmail(sender, job, result));
+	else
+		throw std::invalid_argument{"No qmqp_server configured"};
 }
