@@ -25,7 +25,7 @@ CronPartition::CronPartition(EventLoop &event_loop,
 		       config.database.c_str(), config.database_schema.c_str(),
 		       [this](CronJob &&job){ OnJob(std::move(job)); }),
 	 workplace(_spawn_service,
-		   email_service, config.default_email_sender,
+		   email_service, config.use_qrelay, config.default_email_sender,
 		   pond_socket,
 		   *this,
 		   root_config.concurrency),
